Style signin/signup with styled-components

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "styled-components": "^2.2.3",
     "todomvc-app-css": "^2.1.0"
   },
   "scripts": {
