--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "material-ui": "^0.19.4",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
+    "react-beautiful-dnd": "^2.6.4",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
@@ -21,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "eslint"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
