--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.5",
     "firebase": "^4.6.2",
     "material-ui": "^0.19.4",
+    "moment": "^2.19.2",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-beautiful-dnd": "^2.6.4",
